--- a/src/scss/_comments.scss
+++ b/src/scss/_comments.scss
@@ -1,30 +1,37 @@
-.comments-container {
+.wrapper-comments-container {
   border: 1px solid $black;
-  padding: 3rem;
+  padding: 2rem;
+  @include media-breakpoint-up(sm) {
+    padding: 3rem;
+  }
+}
+
+.comments-container {
+  margin-top: 2rem;
+
   a {
-      margin-bottom: 2rem;
+    margin-bottom: 2rem;
   }
 
+  // comment
   &__comment {
-      margin: 1rem 0;
-      &:first-of-type {
-          margin-top: 2rem;
-      }
+    margin: 1rem 0;
 
     &__user-details {
       p {
         padding: 0;
         font-weight: 400;
+
         span {
-            font-weight: 200;
-            color: $grey;
-            padding-left: 1rem;
+          font-weight: 200;
+          color: $grey;
+          padding-left: 1rem;
         }
       }
     }
 
     &__user-comment {
-      word-wrap:break-word;
+      word-wrap: break-word;
 
       p {
         padding: 0.25rem 0;
@@ -32,11 +39,38 @@
     }
 
     &__user-controls {
-        padding: 1rem 3rem;
+      padding: 1rem 3rem;
+
       a {
         text-transform: lowercase;
       }
     }
   }
 
+  // reply
+  &__comment--reply {
+    margin: 1rem 0;
+    padding-left: 2rem;
+
+    &__user-details {
+      p {
+        padding: 0;
+        font-weight: 400;
+
+        span {
+          font-weight: 200;
+          color: $grey;
+          padding-left: 1rem;
+        }
+      }
+    }
+
+    &__user-comment {
+      word-wrap: break-word;
+
+      p {
+        padding: 0.25rem 0;
+      }
+    }
+  }
 }
